--- a/Reach/.vscode/settings.json
+++ b/Reach/.vscode/settings.json
@@ -1,3 +1,19 @@
 {
-    "python.pythonPath": "C:\\Users\\LENOVO\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
+    "python.pythonPath": "C:\\Users\\LENOVO\\AppData\\Local\\Programs\\Python\\Python37\\python.exe",
+    "sqltools.connections": [
+        {
+            "mysqlOptions": {
+                "authProtocol": "default"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MySQL",
+            "name": "MySQL",
+            "database": "reach",
+            "username": "root",
+            "password": "reach123",
+            "connectionTimeout": 60
+        }
+    ]
 }
